fix header overflow

--- a/website/src/app/pages/home/home.component.scss
+++ b/website/src/app/pages/home/home.component.scss
@@ -1,6 +1,7 @@
 @import '../../../styles/helpers';
 
 #toolkit {
+    overflow:hidden;
     // @media only screen and (max-width:691px) {
     //     position:relative;
     //     &:after {
